--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "react-datepicker": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
